--- a/photo_editor_app/pubspec.yaml
+++ b/photo_editor_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.8
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
