--- a/photo_editor_app/pubspec.yaml
+++ b/photo_editor_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  permission_handler: ^12.0.1
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.8
