--- a/photo_editor_app/pubspec.yaml
+++ b/photo_editor_app/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.8
+
+  photo_manager: ^3.7.1
   image_picker: ^1.1.2
 
 dev_dependencies:
