--- a/photo_editor_app/pubspec.yaml
+++ b/photo_editor_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   photo_manager: ^3.7.1
   image_picker: ^1.1.2
   flutter_acrylic: ^1.1.4
+  window_manager: ^0.5.0
 
 dev_dependencies:
   flutter_test:
