--- a/photo_editor_app/pubspec.yaml
+++ b/photo_editor_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
 
   photo_manager: ^3.7.1
   image_picker: ^1.1.2
+  file_picker: ^10.2.0
   flutter_acrylic: ^1.1.4
 
 dev_dependencies:
