--- a/photo_editor_app/pubspec.yaml
+++ b/photo_editor_app/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   photo_manager: ^3.7.1
   image_picker: ^1.1.2
   file_picker: ^10.2.0
+  file_selector: ^0.9.0
   flutter_acrylic: ^1.1.4
+  crop_your_image: ^2.0.0
+  image: ^4.5.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
